--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -70,14 +70,15 @@
   border: none;
   padding: 1rem;
   border-radius: 0 10px 10px 0;
-  background-color: #ff7d31;
+  background-color: var(--button-color);
   font-size: 1.6rem;
   color: #fff;
   font-weight: 600;
 }
 
 .search-box button:hover {
-  background-color: #e65f11;
+  /* background-color: #e65f11; */
+  filter: brightness(1.3);
   cursor: pointer;
 }
 
@@ -146,6 +147,62 @@
   justify-self: end;
   background-color: #0002;
   border-radius: 50%;
+}
+
+#loading-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+}
+
+#loading-card #load-more {
+  padding: 10px;
+  font-size: 1.6rem;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  background-color: var(--button-color);
+}
+
+#loading-card #load-more:hover {
+  filter: brightness(1.3);
+  cursor: pointer;
+}
+
+/* sou meio paia com CSS */
+
+#loading-icon {
+  width: 50px;
+  height: 50px;
+  background: radial-gradient(farthest-corner at 5px 5px, #ffffff00 30%, #818181 80%);
+  border-radius: 50%;
+  animation: loadIconSpin 1s linear infinite;
+  
+}
+
+#loading-icon::after {
+  display: block;
+  content: "";
+  position: relative;
+  width: 40px;
+  height: 40px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  clip-path: circle(50% at center);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes loadIconSpin {
+  from {
+    transform: rotateZ(0deg);
+  }  
+
+  to {
+    transform: rotateZ(360deg);
+  }
 }
 
 @media screen and (min-width: 400px) {
