--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -134,6 +134,7 @@
   display: inline-block;
   border-radius: 5px;
   color: #fff;
+  text-shadow: -1px 1px 1px #4d4c4c;
   text-align: center;
   text-transform: uppercase;
   font-weight: 600;
